2004-02-16  Atsushi Enomoto  <atsushi@ximian.com>

	* Expression.cs : Added EvaluatedNodeType and NeedAbsoluteMatching
	  to reduce extraneous Matches() trial.
	* Iterator.cs : Removed unused MergedIterator.
	* XPathNavigator.cs : Optimized Matches() not to evaluate ancestors
	  unnecessarily. (Test with NeedAbsoluteMatching).

2004-02-10  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : Added overriden Count properties for some iterators
	  (this fixes the half of #50678).
	  Added ListIterator class (which can reduce GetEnumerator()). 
	  In some places we can omit clone for Current property, so added 
	  some check logic (It has no effect as yet).
	* Expression.cs, DefaultContext.cs :
	  use ListIterator instead of EnumeratorIterator.

2004-02-08  Atsushi Enomoto  <atsushi@ximian.com>

	* DefaultContext.cs, Expression.cs, Iterator.cs :
	  tiny foreach elimination.

2004-02-05  Atsushi Enomoto  <atsushi@ximian.com>

	* DefaultContext.cs : trivial processing order fix.

2004-01-27  Atsushi Enomoto  <atsushi@ximian.com>

	* DefaultContext.cs : Avoid exception if possible.
	* Iterator.cs : Fixed PrecedingSiblingIterator.MoveNext(). When the
	  nav was positioned at the first, it incorrectly points itself.
	  Don't add names to name table while it is useless and expensive.

2004-01-08  Nick Drochak <ndrochak@ieee.org>

	* Iterator.cs: Removed unused variable.
	
2003-12-18 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Parser.jay : now it supresses error output from jay.
	* DefaultContext.cs : (XPathFunctionSubstring) exclude -Infinity.
	* Tokenizer.cs : better error message.
	* XPathDocument.cs : Use XmlValidatingReader to support id() function.
	  (just found MS.NET actually supports it)

2003-12-16 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Iterator.cs : On its iteration, moving Current must not affect to
	  MoveNext(). To assure this, Current must be a clone of navigator.
	  Removed unused code.

2003-12-07 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>
